--- a/scss/_mobilemenu.scss
+++ b/scss/_mobilemenu.scss
@@ -55,7 +55,7 @@
 .parent ul{
     list-style-type: none;
     padding: 0;
-    background-color: $primaryColor;
+    background-color: $secondaryColor;
     display: none;
 }
 .parent:hover ul{
