--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -141,13 +141,13 @@ div.masks{
 
 /* --------------------------- FOOTER --------------------------- */
 #footerWrapper {
-    background-color: $primaryColor
+    background-color: $secondaryColor
 } // end footer wrapper
 
 footer {
     font-size: .85rem;
     padding: 1rem $gutter;
-    color: #eee;
+    color: #fff;
     text-align: center;
     line-height: $leading;
     a {color: $greyColor;}
